--- a/EjemploLogin/app/src/main/res/values/strings.xml
+++ b/EjemploLogin/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">EjemploLogin</string>
+    <string name="e_mail">E-mail</string>
+    <string name="log_in">Log In</string>
+    <string name="password">Password</string>
 </resources>
