--- a/EjemploLogin/app/src/main/res/values/strings.xml
+++ b/EjemploLogin/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="e_mail">E-mail</string>
     <string name="log_in">Log In</string>
     <string name="password">Password</string>
+    <string name="user_name">User Name</string>
+    <string name="sign_up">Sign Up</string>
 </resources>
